# ch32v003j4m6-rx8900ce

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
fusion/: ch32v003j4m6-case-back.stl  ch32v003j4m6-case-front.stl  ch32v003j4m6-rx8900.f3d
kicad/: .gitignore
kicad/ch32v003j4m6-rx8900ce/: ch32v003j4m6-rx8900.kicad_pcb  ch32v003j4m6-rx8900.kicad_pro  ch32v003j4m6-rx8900.kicad_sch  ch32v003j4m6-rx8900.kicad_sym  fp-lib-table  sym-lib-table
kicad/ch32v003j4m6-rx8900ce/ch32v003j4m6-rx8900.pretty/: CH291-1220LF.kicad_mod  task_jp.kicad_mod
src/: main.rs  rx8900.rs
