[package]
name = "ch32v003j4m6-led"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
riscv-rt = { git = "https://github.com/9names/riscv-rt", branch = "rv32e" }

[dependencies]
panic-halt = "0.2.0"
riscv-rt = "0.11.0"

[profile.dev]
opt-level = "s"

